<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">lb</string>
    <string name="hello_world">Hello world!</string>
    <string name="status_territory_radius">半径</string>
    <string name="status_territory_precision">精度</string>
    <string name="status_territory_detection_count">発見数</string>
    <string name="status_territory_expiration_date">期限</string>
    <string name="action_settings">設定</string>
    <string name="action_refresh">更新</string>
    <string name="action_calendar">日付選択</string>
    <string name="action_add">追加</string>
    <string name="action_set">設置する</string>
    <string name="action_select">選択する</string>
    <string name="action_supply">回復する</string>
    <string name="action_move">移動する</string>
    <string name="change_avatar">アバターを変更する</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section_map">マップ</string>
    <string name="title_section_territory_list">テリトリー</string>
    <string name="title_section_notification_list">通知</string>
    <string name="title_activity_character"></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_territory_detail">テリトリー詳細</string>
    <string name="select_character">テリトリーを選んで下さい</string>
    <string name="cancel">キャンセル</string>
    <string name="clear">クリア</string>
    <string name="apply">決定</string>
    <string name="status_user_level">レベル</string>
    <string name="status_point">陣力</string>
    <string name="expired">期限切れ</string>
    <string name="divider_colon">: </string>
    <string name="divider_slash">/</string>
    <string name="empty">ありません</string>
    <string name="message_set_territory">テリトリーを設置しました</string>
    <string name="title_activity_set_territory">テリトリー作成</string>
    <string name="message_out_of_distance">設置範囲外です</string>
    <string name="message_failure_set_territory">テリトリーを設置できませんでした</string>
    <string name="status_character_cost">消費陣力</string>
    <string name="right_arrow">→</string>
    <string name="point_after_set">設置後陣力</string>
    <string name="expiration_date_after_supply">回復後期限</string>
    <string name="dialog_title_set_territory">テリトリーを設置します</string>
    <string name="message_network_error">通信エラーが発生しました</string>
    <string name="message_insufficient_point">陣力が足りません</string>
    <string name="dialog_title_supply">テリトリーを回復します</string>
    <string name="message_supply">回復しました</string>
    <string name="message_begin_move">テリトリーを移動して下さい</string>
    <string name="message_cant_move">期限が切れたテリトリーは移動できません</string>
    <string name="dialog_title_move">テリトリーを移動します</string>
    <string name="message_move">テリトリーを移動しました</string>
    <string name="entering_to">に見つかりました</string>
    <string name="detect_on">で見つけました</string>
    <string name="title_activity_notification_detail">通知詳細</string>
    

</resources>
