<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lb.ui.territory.TerritoryDetailActivity" >
    
    <item android:id="@+id/action_supply"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/action_supply"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_move"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/action_move"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_set"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"
        android:title="@string/action_set"
        android:icon="@android:drawable/ic_menu_save"
        android:visible="false"/>
</menu>
