<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp">

    <ImageView
        android:id="@+id/iv_territory"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/territory" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="5dp">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TERRITORY"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/status_territory_radius" />

            <TextView
                android:id="@+id/tv_radius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1km"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginLeft="2dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/status_territory_precision" />

            <TextView
                android:id="@+id/tv_precision"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="50%"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginLeft="2dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/status_territory_detection_count" />

            <TextView
                android:id="@+id/tv_detection_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0人"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginLeft="2dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/status_territory_expiration_date" />

            <TextView
                android:id="@+id/tv_expiration_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1日後"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginLeft="2dp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
